# equity-alpha-pipeline

./: .gitignore  CLAUDE.md  pyproject.toml
config/: mining.yaml  pipeline.yaml
docs/: nested_validation_workflow.md
reports/: nested_validation_report.md  nested_validation_research_note.md  research_note.md
scripts/: build_sector_mapping.py  run_all.py  run_full_pipeline.py  run_mining.py  stage_1_features.py  stage_2_signals.py  stage_3_backtest.py  stage_4_ml.py  stage_5_robustness.py  stage_6_compare.py  stage_7_stepwise.py
src/: config.py
src/analytics/: attribution.py  bias_aware.py  bootstrap.py  ic.py  performance.py  risk.py  statistical_tests.py
src/data/: cleaner.py  french.py  loader.py  sectors.py
src/factors/: base.py  fundamental.py  momentum.py  risk.py
src/factors/mined/: capxy_yoy.py  cheq_accel.py  cheq_qoq.py  cheq_yoy.py  cshoq_to_sales.py  dlttq_qoq.py  dlttq_yoy.py  epsfxq_div_cogsq.py  epsfxq_div_dlcq.py  epsfxq_div_ltq.py  epsfxq_div_rectq.py  epsfxq_level.py  epsfxq_to_equity.py  ibcomq_qoq.py  (+34 more)
src/gpu/: backend.py  ic_batch.py  neutralize_batch.py  spread_batch.py  turnover_batch.py
src/mining/: codegen.py  compute.py  config.py  deduplicate.py  enumeration.py  evaluate.py  filter.py  inner_folds.py  model_comparison.py  persistence.py  runner.py  stability.py  stepwise.py  transforms.py
src/ml/: models.py  purged_cv.py
src/portfolio/: backtest.py  construction.py  covariance.py  optimization.py  risk_model.py
src/signals/: base.py  combine.py  neutralize.py  registry.py  report_card.py  zscore.py
src/utils/: logger.py
